--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/dices.png" />
+    <link rel="icon" type="image/svg+xml" href="/public/Dice/folk.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dice Game</title>
+    <title>Folkwaretech</title>
   </head>
   <body>
     <div id="root"></div>
